src/llvm/wrapper/core.nim


# ##  Functions in this group only apply to values with alignment, i.e.
# ##  global variables, load and store instructions.
# proc getAlignment*(v: ValueRef): cuint {.cdecl, importc: "LLVMGetAlignment", dynlib: LLVMlib.}
#     ##  Obtain the preferred alignment of the value.
#     ##  @see llvm::AllocaInst::getAlignment()
#     ##  @see llvm::LoadInst::getAlignment()
#     ##  @see llvm::StoreInst::getAlignment()
#     ##  @see llvm::GlobalValue::getAlignment()

# proc setAlignment*(v: ValueRef; bytes: cuint) {.cdecl, importc: "LLVMSetAlignment", dynlib: LLVMlib.}
#     ##  Set the preferred alignment of the value.
#     ##  @see llvm::AllocaInst::setAlignment()
#     ##  @see llvm::LoadInst::setAlignment()
#     ##  @see llvm::StoreInst::setAlignment()
#     ##  @see llvm::GlobalValue::setAlignment()

# proc globalSetMetadata*(global: ValueRef; kind: cuint; md: MetadataRef) {.cdecl, importc: "LLVMGlobalSetMetadata", dynlib: LLVMlib.}
#     ##  Sets a metadata attachment, erasing the existing metadata attachment if
#     ##  it already exists for the given kind.
#     ##
#     ##  @see llvm::GlobalObject::setMetadata()

# proc globalEraseMetadata*(global: ValueRef; kind: cuint) {.cdecl, importc: "LLVMGlobalEraseMetadata", dynlib: LLVMlib.}
#     ##  Erases a metadata attachment of the given kind if it exists.
#     ##
#     ##  @see llvm::GlobalObject::eraseMetadata()

# proc globalClearMetadata*(global: ValueRef) {.cdecl, importc: "LLVMGlobalClearMetadata", dynlib: LLVMlib.}
#     ##  Removes all metadata attachments from this value.
#     ##
#     ##  @see llvm::GlobalObject::clearMetadata()

# proc globalCopyAllMetadata*(value: ValueRef;numEntries: ptr csize_t): ptr ValueMetadataEntry {. cdecl, importc: "LLVMGlobalCopyAllMetadata", dynlib: LLVMlib.}
#     ##  Retrieves an array of metadata entries representing the metadata attached to
#     ##  this value. The caller is responsible for freeing this array by calling
#     ##  \c LLVMDisposeValueMetadataEntries.
#     ##
#     ##  @see llvm::GlobalObject::getAllMetadata()

# proc disposeValueMetadataEntries*(entries: ptr ValueMetadataEntry) {.cdecl, importc: "LLVMDisposeValueMetadataEntries", dynlib: LLVMlib.}
#     ##  Destroys value metadata entries.

# proc valueMetadataEntriesGetKind*(entries: ptr ValueMetadataEntry;index: cuint): cuint {. cdecl, importc: "LLVMValueMetadataEntriesGetKind", dynlib: LLVMlib.}
#     ##  Returns the kind of a value metadata entry at a specific index.

# proc valueMetadataEntriesGetMetadata*(entries: ptr ValueMetadataEntry;index: cuint): MetadataRef {. cdecl, importc: "LLVMValueMetadataEntriesGetMetadata", dynlib: LLVMlib.}
#     ##  Returns the underlying metadata node of a value metadata entry at a
#     ##  specific index.

# ##  This group contains functions that operate on global variable values.
# ##
# ##  @see llvm::GlobalVariable
# proc addGlobal*(m: ModuleRef; ty: TypeRef; name: cstring): ValueRef {.cdecl, importc: "LLVMAddGlobal", dynlib: LLVMlib.}
proc newGlobal*(module: Module, typ: Type, name: string): GlobalVariable =
    ##  Wrapping:
    ##  * `addGlobal(ModuleRef, TypeRef, cstring)<../llvm/Core.html#addGlobal,ModuleRef,TypeRef,cstring>`_
    runnableExamples:
        let
            module = newModule("main")
            Int64 = intType(64)
            global = module.newGlobal(Int64, "a")
        assert global.kind == GlobalVariableValueKind
    newValue[GlobalVariable](module.module.addGlobal(typ.typ, name))

# proc addGlobalInAddressSpace*(m: ModuleRef; ty: TypeRef; name: cstring;addressSpace: cuint): ValueRef {.cdecl, importc: "LLVMAddGlobalInAddressSpace", dynlib: LLVMlib.}
# proc getNamedGlobal*(m: ModuleRef; name: cstring): ValueRef {.cdecl, importc: "LLVMGetNamedGlobal", dynlib: LLVMlib.}
# proc getFirstGlobal*(m: ModuleRef): ValueRef {.cdecl, importc: "LLVMGetFirstGlobal", dynlib: LLVMlib.}
# proc getLastGlobal*(m: ModuleRef): ValueRef {.cdecl, importc: "LLVMGetLastGlobal", dynlib: LLVMlib.}
# proc getNextGlobal*(globalVar: ValueRef): ValueRef {.cdecl, importc: "LLVMGetNextGlobal", dynlib: LLVMlib.}
# proc getPreviousGlobal*(globalVar: ValueRef): ValueRef {.cdecl, importc: "LLVMGetPreviousGlobal", dynlib: LLVMlib.}
# proc deleteGlobal*(globalVar: ValueRef) {.cdecl, importc: "LLVMDeleteGlobal", dynlib: LLVMlib.}
# proc getInitializer*(globalVar: ValueRef): ValueRef {.cdecl, importc: "LLVMGetInitializer", dynlib: LLVMlib.}
# proc setInitializer*(globalVar: ValueRef; constantVal: ValueRef) {.cdecl, importc: "LLVMSetInitializer", dynlib: LLVMlib.}
proc `initializer=`*(globalVar: Value, constantVal: Value) =
    setInitializer(globalVar.value, constantVal.value)
# proc isThreadLocal*(globalVar: ValueRef): Bool {.cdecl, importc: "LLVMIsThreadLocal", dynlib: LLVMlib.}
# proc setThreadLocal*(globalVar: ValueRef; isThreadLocal: Bool) {.cdecl, importc: "LLVMSetThreadLocal", dynlib: LLVMlib.}
# proc isGlobalConstant*(globalVar: ValueRef): Bool {.cdecl, importc: "LLVMIsGlobalConstant", dynlib: LLVMlib.}
proc constant*(globalVar: Value): bool =
    isGlobalConstant(globalVar.value)
# proc setGlobalConstant*(globalVar: ValueRef; isConstant: Bool) {.cdecl, importc: "LLVMSetGlobalConstant", dynlib: LLVMlib.}
proc `constant=`*(globalVar: Value, isConstant: bool) =
    setGlobalConstant(globalVar.value, isConstant)
# proc getThreadLocalMode*(globalVar: ValueRef): ThreadLocalMode {.cdecl, importc: "LLVMGetThreadLocalMode", dynlib: LLVMlib.}
# proc setThreadLocalMode*(globalVar: ValueRef; mode: ThreadLocalMode) {.cdecl, importc: "LLVMSetThreadLocalMode", dynlib: LLVMlib.}
# proc isExternallyInitialized*(globalVar: ValueRef): Bool {.cdecl, importc: "LLVMIsExternallyInitialized", dynlib: LLVMlib.}
# proc setExternallyInitialized*(globalVar: ValueRef; isExtInit: Bool) {.cdecl, importc: "LLVMSetExternallyInitialized", dynlib: LLVMlib.}



# ##  This group contains function that operate on global alias values.
# ##
# ##  @see llvm::GlobalAlias
# proc addAlias*(m: ModuleRef; ty: TypeRef; aliasee: ValueRef;name: cstring): ValueRef {. cdecl, importc: "LLVMAddAlias", dynlib: LLVMlib.}

# proc getNamedGlobalAlias*(m: ModuleRef; name: cstring;nameLen: csize_t): ValueRef {. cdecl, importc: "LLVMGetNamedGlobalAlias", dynlib: LLVMlib.}
#     ##  Obtain a GlobalAlias value from a Module by its name.
#     ##
#     ##  The returned value corresponds to a llvm::GlobalAlias value.
#     ##
#     ##  @see llvm::Module::getNamedAlias()

# proc getFirstGlobalAlias*(m: ModuleRef): ValueRef {.cdecl, importc: "LLVMGetFirstGlobalAlias", dynlib: LLVMlib.}
#     ##  Obtain an iterator to the first GlobalAlias in a Module.
#     ##
#     ##  @see llvm::Module::alias_begin()

# proc getLastGlobalAlias*(m: ModuleRef): ValueRef {.cdecl, importc: "LLVMGetLastGlobalAlias", dynlib: LLVMlib.}
#     ##  Obtain an iterator to the last GlobalAlias in a Module.
#     ##
#     ##  @see llvm::Module::alias_end()

# proc getNextGlobalAlias*(ga: ValueRef): ValueRef {.cdecl, importc: "LLVMGetNextGlobalAlias", dynlib: LLVMlib.}
#     ##  Advance a GlobalAlias iterator to the next GlobalAlias.
#     ##
#     ##  Returns NULL if the iterator was already at the end and there are no more
#     ##  global aliases.

# proc getPreviousGlobalAlias*(ga: ValueRef): ValueRef {.cdecl, importc: "LLVMGetPreviousGlobalAlias", dynlib: LLVMlib.}
#     ##  Decrement a GlobalAlias iterator to the previous GlobalAlias.
#     ##
#     ##  Returns NULL if the iterator was already at the beginning and there are
#     ##  no previous global aliases.

# proc aliasGetAliasee*(alias: ValueRef): ValueRef {.cdecl, importc: "LLVMAliasGetAliasee", dynlib: LLVMlib.}
#     ##  Retrieve the target value of an alias.

# proc aliasSetAliasee*(alias: ValueRef; aliasee: ValueRef) {.cdecl, importc: "LLVMAliasSetAliasee", dynlib: LLVMlib.}
#     ##  Set the target value of an alias.


# ##  Functions in this group operate on LLVMValueRef instances that
# ##  correspond to llvm::Function instances.
# ##
# ##  @see llvm::Function
# proc deleteFunction*(fn: ValueRef) {.cdecl, importc: "LLVMDeleteFunction", dynlib: LLVMlib.}
#     ##  Remove a function from its containing module and deletes it.
#     ##
#     ##  @see llvm::Function::eraseFromParent()

# proc hasPersonalityFn*(fn: ValueRef): Bool {.cdecl, importc: "LLVMHasPersonalityFn", dynlib: LLVMlib.}
#     ##  Check whether the given function has a personality function.
#     ##
#     ##  @see llvm::Function::hasPersonalityFn()

# proc getPersonalityFn*(fn: ValueRef): ValueRef {.cdecl, importc: "LLVMGetPersonalityFn", dynlib: LLVMlib.}
#     ##  Obtain the personality function attached to the function.
#     ##
#     ##  @see llvm::Function::getPersonalityFn()

# proc setPersonalityFn*(fn: ValueRef; personalityFn: ValueRef) {.cdecl, importc: "LLVMSetPersonalityFn", dynlib: LLVMlib.}
#     ##  Set the personality function attached to the function.
#     ##
#     ##  @see llvm::Function::setPersonalityFn()

# proc lookupIntrinsicID*(name: cstring; nameLen: csize_t): cuint {.cdecl, importc: "LLVMLookupIntrinsicID", dynlib: LLVMlib.}
#     ##  Obtain the intrinsic ID number which matches the given function name.
#     ##
#     ##  @see llvm::Function::lookupIntrinsicID()

# proc getIntrinsicID*(fn: ValueRef): cuint {.cdecl, importc: "LLVMGetIntrinsicID", dynlib: LLVMlib.}
#     ##  Obtain the ID number from a function instance.
#     ##
#     ##  @see llvm::Function::getIntrinsicID()

# proc getIntrinsicDeclaration*(`mod`: ModuleRef; id: cuint; paramTypes: ptr TypeRef;paramCount: csize_t): ValueRef {.cdecl, importc: "LLVMGetIntrinsicDeclaration", dynlib: LLVMlib.}
#     ##  Create or insert the declaration of an intrinsic.  For overloaded intrinsics,
#     ##  parameter types must be provided to uniquely identify an overload.
#     ##
#     ##  @see llvm::Intrinsic::getDeclaration()

# proc intrinsicGetType*(ctx: ContextRef; id: cuint; paramTypes: ptr TypeRef;paramCount: csize_t): TypeRef {.cdecl, importc: "LLVMIntrinsicGetType", dynlib: LLVMlib.}
#     ##  Retrieves the type of an intrinsic.  For overloaded intrinsics, parameter
#     ##  types must be provided to uniquely identify an overload.
#     ##
#     ##  @see llvm::Intrinsic::getType()

# proc intrinsicGetName*(id: cuint; nameLength: ptr csize_t): cstring {.cdecl, importc: "LLVMIntrinsicGetName", dynlib: LLVMlib.}
#     ##  Retrieves the name of an intrinsic.
#     ##
#     ##  @see llvm::Intrinsic::getName()

# proc intrinsicCopyOverloadedName*(id: cuint; paramTypes: ptr TypeRef;paramCount: csize_t; nameLength: ptr csize_t): cstring {. cdecl, importc: "LLVMIntrinsicCopyOverloadedName", dynlib: LLVMlib.}
#     ##  Copies the name of an overloaded intrinsic identified by a given list of
#     ##  parameter types.
#     ##
#     ##  Unlike LLVMIntrinsicGetName, the caller is responsible for freeing the
#     ##  returned string.
#     ##
#     ##  @see llvm::Intrinsic::getName()

# proc intrinsicIsOverloaded*(id: cuint): Bool {.cdecl, importc: "LLVMIntrinsicIsOverloaded", dynlib: LLVMlib.}
#     ##  Obtain if the intrinsic identified by the given ID is overloaded.
#     ##
#     ##  @see llvm::Intrinsic::isOverloaded()

# proc getFunctionCallConv*(fn: ValueRef): cuint {.cdecl, importc: "LLVMGetFunctionCallConv", dynlib: LLVMlib.}
#     ##  Obtain the calling function of a function.
#     ##
#     ##  The returned value corresponds to the LLVMCallConv enumeration.
#     ##
#     ##  @see llvm::Function::getCallingConv()

# proc setFunctionCallConv*(fn: ValueRef; cc: cuint) {.cdecl, importc: "LLVMSetFunctionCallConv", dynlib: LLVMlib.}
#     ##  Set the calling convention of a function.
#     ##
#     ##  @see llvm::Function::setCallingConv()
#     ##
#     ##  @param Fn Function to operate on
#     ##  @param CC LLVMCallConv to set calling convention to
